# maxicp

./: .gitignore  AGENTS.md  CNAME  README.md  about.html  allclasses-index.html  allpackages-index.html  constant-values.html  genindex.html  help-doc.html  index-all.html  index.html  intro.html  maxicp.html  objects.inv  overview-summary.html  overview-tree.html  pom.xml  references.html  search.html  searchindex.js  serialized-form.html
.github/workflows/: javadoc.yml  publish.yml  techreport.yml  test.yml  userguide.yml
_sources/: intro.rst.txt
_sources/learning_maxicp/: allmodels.rst.txt  architecture.rst.txt  getting_started.rst.txt  propagation.rst.txt  scheduling.rst.txt  symbolic_modeling.rst.txt
_static/: bizstyle.js  custom.css
coverage/: index.html  jacoco-sessions.html  jacoco.csv  jacoco.xml
coverage/org.maxicp.cp.engine.constraints.scheduling/: Activity.html  Activity.java.html  (+127 more)
javadoc/: allclasses-index.html  allpackages-index.html  constant-values.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  module-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  search.html  serialized-form.html  tag-search-index.js  type-search-index.js
learning_maxicp/: allmodels.html  architecture.html  getting_started.html  nqueens.html  part_1.html  propagation.html  scheduling.html  search_strategies.html  seqvar.html  state_management.html  symbolic_modeling.html
minizinc/: tmsp.mzn
python-bindings/: README.md  build.sh  maxicp_demo.ipynb  pyproject.toml
python-bindings/c/: maxicp.h
python-bindings/python/maxicp/: __init__.py  constraints.py  expressions.py  model.py  search.py  variables.py
python-bindings/python/maxicp/_lib/: __init__.py
python-bindings/python/maxicp/examples/: __init__.py  magic_square.py  nqueens.py  qap.py
scripts/: make_pctsptw_instances.py  otsp_table.py  package-mini-xcsp3.sh  pctsp_table.py  pctsptw_plot.py  pctsptw_plot_jfpc.py  process_minizinc.sh  run_otsp.sh  run_pctsp.sh  run_pctsptw.sh  run_pctsptw_measure_memory.sh  run_tmsp.sh  run_tmsp_minizinc.sh  run_tsptw.sh  tmsp_json_to_dzn.py  tmsp_plot.py  tsptw_plot.py  tsptw_plot_jfpc.py
tech-report/: compile.sh  maxicp.bib  maxicp.sty  maxicp.tex
userguide/: check_source_links.py  write_docs.py
(+8407 files in other folders)
